# vast

./: .dockerignore  .env  .env.docker.example  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  task-20-approval-flow.json  task-21-dm.json  task-23-presence.json  task-24-typing.json
.github/workflows/: ci.yml
.omo/evidence/: task-7-vote-command.txt
.omo/plans/: vote-command.md
.playwright-mcp/: page-2026-07-01T05-24-24-479Z.yml  page-2026-07-01T06-18-08-941Z.yml  page-2026-07-01T06-18-25-793Z.yml  page-2026-07-01T06-18-38-968Z.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-build.shell  task-1-deps.json  task-10-fallback.txt  task-11-health.json  task-12-auth-flow.json  task-13-channel-crud.json  task-14-cursor-pagination.json  task-15-ws-push.json  task-16-permission.txt  task-17-archive.txt  task-18-login.md  task-2-devserver.shell  task-22-size-limit.txt  task-22-upload-download.txt  task-26-search.json  task-27-soft-delete.json  task-5-pragma.txt  task-5-tables.txt  task-6-websocket.txt  task-7-auth-test.txt  task-8-error-format.json
.sisyphus/plans/: e2e-test-suite.md  im-enterprise-plan.md
certs/: cert.pem  key.pem
db/migrations/: 007_bots.down.sql  (+18 more)
deploy/: im-server.service  install.sh  nginx.conf
docs/: slack-like2.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: bench.sh  build.sh  clean-db.sh  dev-server.sh  e2e-test.sh  gen-self-signed-cert.sh  release.sh
src/: embed.rs  error.rs  lib.rs  main.rs
(+192 files in other folders)
